--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -19,8 +19,8 @@
   justify-content: center;
 
   &__content {
-    padding: 3em;
-    box-shadow: 0 0 10px $gray-light;
+    padding: 2em;
+    box-shadow: 0 0 10px $app-bg-dark;
     position: relative;
     width: 300px;
     background-color: $app-bg-dark;
