--- a/src/styles/kendo.scss
+++ b/src/styles/kendo.scss
@@ -1,14 +1,7 @@
-$accent: #95a3ac;
-body .k-textbox {
-    height: calc(1.42857143em + (0.2rem * 2));
-}
+$accent: #00aeef;
+$series-a: #00aeef;
 
-$font-size: 12px;
-$padding-x: 4px;
-$padding-y: 2px;
 //https://www.telerik.com/kendo-angular-ui/components/styling/theme-default/customization/
-
-
 body .k-multiselect-wrap {
     padding-right: 0;
 
