--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
                            placeholder="Enter Username">
 
                     <div *ngIf="login.hasError('required') && (login.dirty || login.touched)"
-                        class="alert alert-danger"> Username is required.
+                        class="k-tooltip-validation k-invalid-msg"> Username is required.
                     </div>
                 </div>
 
@@ -28,7 +28,7 @@
                            placeholder="Enter Password">
 
                     <div *ngIf="password.hasError('required') && (password.dirty || password.touched)"
-                         class="alert alert-danger">Password is required.
+                         class="k-tooltip-validation k-invalid-msg">Password is required.
                     </div>
                 </div>
             </div>
