--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-page" [@routerTransition]>
-    <div class="login-page__content">
-        <img src="/assets/images/logo.png" width="150px" class="user-avatar"/>
+    <div class="login-page__content k-content">
+        <img src="/assets/images/logo-white.png" width="150px" class="user-avatar"/>
 
         <form novalidate [formGroup]="loginForm" (ngSubmit)="onSubmitForm(loginForm.value, loginForm.valid)">
             <div class="form-content">
