--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,3 +1,9 @@
+app-home,
+app-dashboard1-page {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
 
 .main-container {
   flex: 1;
@@ -6,4 +12,6 @@
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
