--- a/src/app/layout/user/user.component.scss
+++ b/src/app/layout/user/user.component.scss
@@ -1,4 +1,20 @@
-.k-dropdown,
-.k-textbox {
+@import "../../../styles/utils";
+
+.user-settings-view {
+  height: 100%;
+
+  .k-form-inline {
+    box-sizing: border-box;
+    width: 350px;
+
+    @include respond-below(sm) {
+      width: 100%;
+    }
+  }
+
+  .k-dropdown,
+  .k-maskedtextbox,
+  .k-textbox {
     width: 100%;
+  }
 }
